plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.travolish'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	
	// Supabase Storage (replacing S3)
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
	
	// Email notification support
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	
	// SMS notification support (Twilio - optional)
	implementation 'com.twilio.sdk:twilio:9.3.0'
	
	// Payment integration (Razorpay)
	implementation 'com.razorpay:razorpay-java:1.4.4'
	
	// JSON support
	implementation 'org.json:json:20230227'
	
	// Task scheduling
	implementation 'org.springframework.boot:spring-boot-starter:3.5.7'
	
	// WebSocket support for real-time chat
	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.5.7'
	implementation 'org.webjars:sockjs-client:1.5.1'
	implementation 'org.webjars:stomp-websocket:2.3.4'
	
	// Model mapping
	implementation 'org.modelmapper:modelmapper:3.1.1'
	
	// Logging
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
	// PostgreSQL database driver
	runtimeOnly 'org.postgresql:postgresql:42.7.1'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.5.7'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
springBoot {
	mainClass = 'com.travolish.traveller.TravellerServiceApplication'
}